--- a/Integrations/Home Assistant/heishamon.yaml
+++ b/Integrations/Home Assistant/heishamon.yaml
@@ -24,238 +24,146 @@
 ## 1.4.0 (18-09-2022)
 ##   Added
 ##   - Split heatshift into separate Z1 and Z2
+##
+## 1.5.0 (23-04-2022)
+##   - Replace automations with mqtt.number and mqtt.select
+##   - Add buffer tank temperature and buffer tank delta
 
-# Automations #
-###############
-automation:
-  #Fetches quiet level from status and sets the selector accordingly
-  - alias: Set quiet level selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/Quiet_Mode_Level"
-    action:
-      service: input_select.select_option
-      data_template:
-        entity_id: input_select.heishamon_quietmode
-        option: >-
-          {%- if trigger.payload == "0" -%}
-            Off
-          {%- else -%}
-            {{ trigger.payload }}
-          {%- endif -%}
+# sensor #
+##########
+mqtt:
+  number:
+    - obejct_id: heishamon_tank_temp
+      name: Set Tank Temperature
+      min: 40
+      max: 75
+      step: 1
+      state_topic: "panasonic_heat_pump/main/DHW_Target_Temp"
+      command_topic: "panasonic_heat_pump/commands/SetDHWTemp"
 
-  #Sets quiet level to the selected value
-  - alias: Set quiet level
-    trigger:
-      platform: state
-      entity_id: input_select.heishamon_quietmode
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetQuietMode
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {%- if states('input_select.heishamon_quietmode') == "Off" -%}
-            0
-          {%- else -%}
-            {{ states('input_select.heishamon_quietmode') }}
-          {%- endif -%}
+    - object_id: heishamon_heatshift_z1
+      name: Set Zone 1 Temperature
+      min: -5
+      max: 40
+      step: 1
+      state_topic: "panasonic_heat_pump/main/Z1_Heat_Request_Temp"
+      command_topic: "panasonic_heat_pump/commands/SetZ1HeatRequestTemperature"
 
-  #Fetches powerful level from status and sets the selector accordingly
-  - alias: Set powerful level selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/Powerful_Mode_Time"
-    action:
-      service: input_select.select_option
-      data_template:
-        entity_id: input_select.heishamon_powermode
-        option: >-
-          {%- if trigger.payload == "0" -%}
+    - object_id: heishamon_heatshift_z2
+      name: Set Zone 2 Temperature
+      min: -5
+      max: 40
+      step: 1
+      state_topic: "panasonic_heat_pump/main/Z2_Heat_Request_Temp"
+      command_topic: "panasonic_heat_pump/commands/SetZ2HeatRequestTemperature"
+
+    - object_id: heishamon_buffer_tank_delta
+      name: Set Buffer Tank Delta
+      min: 0
+      max: 10
+      step: 1
+      state_topic: "panasonic_heat_pump/main/Buffer_Tank_Delta"
+      command_topic: "panasonic_heat_pump/commands/SetBufferDelta"
+      availability:
+        topic: "panasonic_heat_pump/main/Buffer_Installed"
+        payload_available: "1"
+        payload_not_available: "0"
+
+  select:
+    - object_id: heishamon_quietmode
+      name: Set Quiet Mode
+      options:
+        - "Off"
+        - "1"
+        - "2"
+        - "3"
+        - "Scheduled"
+      state_topic: "panasonic_heat_pump/main/Quiet_Mode_Level"
+      value_template: >-
+        {%- if value == "4" -%}
+          Scheduled
+        {%- elif value == "0" -%}
+          Off
+        {%- else -%}
+          {{ value }}
+        {%- endif -%}
+      command_topic: "panasonic_heat_pump/commands/SetQuietMode"
+      command_template: >-
+        {%- if value == "Scheduled" -%}
+          4
+        {%- elif value == "Off" -%}
+          0
+        {%- else -%}
+          {{ value }}
+        {%- endif -%}
+
+    - object_id: heishamon_powermode
+      name: Set Powerful Mode
+      options:
+        - "Off"
+        - 30 min
+        - 60 min
+        - 90 min
+      state_topic: "panasonic_heat_pump/main/Powerful_Mode_Time"
+      value_template: >-
+        {%- if trigger.payload == "0" -%}
             Off
           {%- else -%}
             {{ (trigger.payload | int) * 30 }} min
           {%- endif -%}
-
-  #Sets powerful level to the selected value
-  - alias: Set powerful level
-    trigger:
-      platform: state
-      entity_id: input_select.heishamon_powermode
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetPowerfulMode
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {%- if states('input_select.heishamon_powermode') == "Off" -%}
+      command_topic: "panasonic_heat_pump/commands/SetPowerfulMode"
+      command_template: >-
+        {%- if states('input_select.heishamon_powermode') == "Off" -%}
             0
           {%- else -%}
             {{ "%.0f" % ((states('input_select.heishamon_powermode') | replace("min", "") | int) / 30) }}
           {%- endif -%}
 
-  #Fetches heatmode from status and sets the selector accordingly
-  - alias: Set heatmode selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/Operating_Mode_State"
-    action:
-      service: input_select.select_option
-      data_template:
-        entity_id: input_select.heishamon_heatmode
-        option: >-
-          {%- if trigger.payload == "0" -%}
-            Heat
-          {%- elif trigger.payload == "3" -%}
-            DHW
-          {%- elif trigger.payload == "4" -%}
-            Heat+DHW
-          {%- endif -%}
+    - object_id: heishamon_heatmode
+      name: Set Heat Mode
+      options:
+        - Heat
+        - Cool
+        - Auto
+        - DHW
+        - Heat+DHW
+        - Cool+DHW
+        - Auto+DHW
+      state_topic: "panasonic_heat_pump/main/Operating_Mode_State"
+      value_template: >-
+        {%- if value == "0" -%}
+          Heat
+        {%- elif value == "1" -%}
+          Cool
+        {%- elif value == "2" -%}
+          Auto
+        {%- elif value == "3" -%}
+          DHW
+        {%- elif value == "4" -%}
+          Heat+DHW
+        {%- elif value == "5" -%}
+          Cool+DHW
+        {%- elif value == "6" -%}
+          Auto+DHW
+        {%- endif -%}
+      command_topic: "panasonic_heat_pump/commands/SetOperationMode"
+      command_template: >-
+        {%- if value == "Heat" -%}
+          0
+        {%- elif value == "Cool" -%}
+          1
+        {%- elif value == "Auto" -%}
+          2
+        {%- elif value == "DHW" -%}
+          3
+        {%- elif value == "Heat+DHW" -%}
+          4
+        {%- elif value == "Cool+DHW" -%}
+          5
+        {%- elif value == "Auto+DHW" -%}
+          6
+        {%- endif -%}
 
-  #Sets heatmode to the selected value
-  - alias: Set heatmode
-    trigger:
-      platform: state
-      entity_id: input_select.heishamon_heatmode
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetOperationMode
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {%- if states('input_select.heishamon_heatmode') == "Heat" -%}
-            0
-          {%- elif states('input_select.heishamon_heatmode') == "DHW" -%}
-            3
-          {%- elif states('input_select.heishamon_heatmode') == "Heat+DHW" -%}
-            4
-          {%- endif -%}
-
-  #Fetches Z1 temperature from status and sets the selector accordingly
-  - alias: Set Z1 selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/Z1_Heat_Request_Temp"
-    action:
-      service: input_number.set_value
-      data_template:
-        entity_id: input_number.heishamon_heatshift_z1
-        value: >-
-          {{ "%.1f" % (trigger.payload | int) }}
-
-  #Sets Z1 temperature to the selected value
-  - alias: Set Z1
-    trigger:
-      platform: state
-      entity_id: input_number.heishamon_heatshift_z1
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetZ1HeatRequestTemperature
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {{ "%.0f" % (states('input_number.heishamon_heatshift_z1') | int) }}
-
-  #Fetches Z2 temperature from status and sets the selector accordingly
-  - alias: Set Z2 selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/Z2_Heat_Request_Temp"
-    action:
-      service: input_number.set_value
-      data_template:
-        entity_id: input_number.heishamon_heatshift_z2
-        value: >-
-          {{ "%.1f" % (trigger.payload | int) }}
-
-  #Sets Z2 temperature to the selected value
-  - alias: Set Z2
-    trigger:
-      platform: state
-      entity_id: input_number.heishamon_heatshift_z2
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetZ2HeatRequestTemperature
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {{ "%.0f" % (states('input_number.heishamon_heatshift_z2') | int) }}
-
-  #Fetches tank target temperature from status and sets the selector accordingly
-  - alias: Set tank target temperature selector
-    trigger:
-      platform: mqtt
-      topic: "panasonic_heat_pump/main/DHW_Target_Temp"
-    action:
-      service: input_number.set_value
-      data_template:
-        entity_id: input_number.heishamon_tank_temp
-        value: >-
-          {{ "%.1f" % (trigger.payload | int) }}
-
-  #Sets tank target temperature to the selected value
-  - alias: Set tank target temperature
-    trigger:
-      platform: state
-      entity_id: input_number.heishamon_tank_temp
-    action:
-      service: mqtt.publish
-      data_template:
-        topic: panasonic_heat_pump/commands/SetDHWTemp
-        retain: false #IMPORTANT! ALWAYS set retain flag false for commands!
-        payload_template: >-
-          {{ "%.0f" % (states('input_number.heishamon_tank_temp') | int) }}
-
-# input_number #
-################
-input_number:
-  heishamon_tank_temp:
-    name: Set Tank Temperature
-    min: 40
-    max: 75
-    step: 1
-
-  heishamon_heatshift_z1:
-    name: Set Zone 1 Temperature
-    min: -5
-    max: 40
-    step: 1
-
-  heishamon_heatshift_z2:
-    name: Set Zone 2 Temperature
-    min: -5
-    max: 40
-    step: 1
-
-# input_select #
-################
-input_select:
-  heishamon_quietmode:
-    name: Set Quiet Mode
-    options:
-      - "Off"
-      - "1"
-      - "2"
-      - "3"
-
-  heishamon_powermode:
-    name: Set Powerful Mode
-    options:
-      - "Off"
-      - 30 min
-      - 60 min
-      - 90 min
-
-  heishamon_heatmode:
-    name: Set Heat Mode
-    options:
-      - Heat+DHW
-      - Heat
-      - DHW
-
-# sensor #
-##########
-mqtt:
   sensor:
     #TOP0 - Power state
     - name: Aquarea Power State
@@ -455,6 +363,16 @@ mqtt:
     - name: Aquarea Last Error
       state_topic: "panasonic_heat_pump/main/Error"
 
+    # TOP46 - Buffer temp
+    - name: Aquarea Buffer Temperature
+      state_topic: "panasonic_heat_pump/main/Buffer_Temp"
+      unit_of_measurement: "°C"
+      state_class: "measurement"
+      availability:
+        topic: "panasonic_heat_pump/main/Buffer_Installed"
+        payload_available: "1"
+        payload_not_available: "0"
+
     #TOP49 - Main HEX Outlet temp
     - name: Aquarea Main HEX Outlet Temperature
       state_topic: "panasonic_heat_pump/main/Main_Hex_Outlet_Temp"
@@ -566,6 +484,12 @@ mqtt:
     - name: Aquarea Compressor Current
       state_topic: "panasonic_heat_pump/main/Compressor_Current"
       unit_of_measurement: "A"
+      state_class: "measurement"
+
+    #TOP113 - Buffer Tank Delta
+    - name: Aquarea Buffer Tank Delta
+      state_topic: "panasonic_heat_pump/main/Buffer_Tank_Delta"
+      unit_of_measurement: "K"
       state_class: "measurement"
 
     ##1-Wire - Example, replace with correct sensor ID
